--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ target/
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# IntelliJ files
+.idea/workspace.xml
