adjust temp files to go out of git directory.

--- a/mysite/uwsgi.ini
+++ b/mysite/uwsgi.ini
@@ -1,13 +1,12 @@
 [uwsgi]
-base = /Users/rjtang/_hack/joy_django
-project = mysite
-
 home = /Users/rjtang/_hack/env.python34
+base = /Users/rjtang/_hack/joy_django
 chdir = %(base)
+project = mysite
 module = %(project).wsgi:application
 master = True
-pidfile = %(base)/var/mysite-uwsgi.pid
-socket = %(base)/var/mysite-uwsgi.sock
 vacuum = True
 max-requests = 5000
-daemonize = %(base)/var/logs/mysite-uwsgi.log
+pidfile = /tmp/mysite-uwsgi.pid
+socket = /tmp/mysite-uwsgi.sock
+daemonize = /tmp/mysite-uwsgi.log
