--- a/mysite/nginx.conf
+++ b/mysite/nginx.conf
@@ -1,6 +1,6 @@
 # the upstream component nginx needs to connect to
 upstream django {
-    server unix:///Users/rjtang/_hack/joy_django/var/mysite-uwsgi.sock; #for a file socket
+    server unix:///tmp/mysite-uwsgi.sock; #for a file socket
 }
 
 # configuration of the server
