Move static dir to home

--- a/mysite/nginx.conf
+++ b/mysite/nginx.conf
@@ -19,8 +19,8 @@ server {
         alias /Users/rjtang/_hack/joy_django/media;
     }
 
-    location /static {
-        alias /Users/rjtang/_hack/joy_django/static;
+    location /home {
+        alias /Users/rjtang/_hack/joy_django/home;
     }
 
     # Finally, send all non-media requests to the Django server.
