moving static back to static dir since aws seems only work with static.

--- a/mysite/nginx.conf
+++ b/mysite/nginx.conf
@@ -19,8 +19,8 @@ server {
         alias /Users/rjtang/_hack/joy_django/media;
     }
 
-    location /home {
-        alias /Users/rjtang/_hack/joy_django/home;
+    location /static {
+        alias /Users/rjtang/_hack/joy_django/static;
     }
 
     # Finally, send all non-media requests to the Django server.
